5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1692_1099.log
== TEST (2019-04-23 22:08:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if(a< b+c) and (b< a+c) and (c< a+b):
	elif a==b and b==c:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isoceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 7
    elif a==b and b==c:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:08:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if(a< b+c) and (b< a+c) and (c< a+b):
	elif a==b and b==c:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isoceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 7
    elif a==b and b==c:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:09:21) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if(a< b+c) and (b< a+c) and (c< a+b):
	elif(a==b and b==c):
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isoceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 7
    elif(a==b and b==c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:15:07) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if(a< b+c) and (b< a+c) and (c< a+b):
elif(a==b and b==c):
		print("tipo de triangulo: equilatero")
elif a==b or b==c or a==c:
		print("Tipo de triangulo: isoceles")
elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 7
    elif(a==b and b==c):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:15:25) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if(a< b+c) and (b< a+c) and (c< a+b):
elif a==b and b==c:
		print("tipo de triangulo: equilatero")
elif a==b or b==c or a==c:
		print("Tipo de triangulo: isoceles")
elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 7
    elif a==b and b==c:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:16:10) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if(a< b+c) and (b< a+c) and (c< a+b):
elif ((a==b) (and b==c)):
		print("tipo de triangulo: equilatero")
elif a==b or b==c or a==c:
		print("Tipo de triangulo: isoceles")
elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 7
    elif ((a==b) (and b==c)):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:16:43) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if(a< b+c) and (b< a+c) and (c< a+b):
elif((a==b) (and b==c)):
		print("tipo de triangulo: equilatero")
elif a==b or b==c or a==c:
		print("Tipo de triangulo: isoceles")
elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 7
    elif((a==b) (and b==c)):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:19:55) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas:" a, b, c)
elif((a==b) (and b==c)):
		print("tipo de triangulo: equilatero")
elif a==b or b==c or a==c:
		print("Tipo de triangulo: isoceles")
elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 7
    print("Entradas:" a, b, c)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:20:37) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas:" "a", "b", "c")
elif((a==b) (and b==c)):
		print("tipo de triangulo: equilatero")
elif a==b or b==c or a==c:
		print("Tipo de triangulo: isoceles")
elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 8
    elif((a==b) (and b==c)):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:21:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas:" , a, b, c)
elif((a==b) (and b==c)):
		print("tipo de triangulo: equilatero")
elif a==b or b==c or a==c:
		print("Tipo de triangulo: isoceles")
elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 8
    elif((a==b) (and b==c)):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:21:27) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas:" , a, b, c)
		print("tipo de triangulo: equilatero")
elif a==b or b==c or a==c:
		print("Tipo de triangulo: isoceles")
elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 8
    print("tipo de triangulo: equilatero")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:21:35) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas:" , a, b, c)
	print("tipo de triangulo: equilatero")
elif a==b or b==c or a==c:
		print("Tipo de triangulo: isoceles")
elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 4.0 4.0
tipo de triangulo: equilatero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:22:48) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas:" , a, b, c)
elif a==b and b==c and a!=0:
	print("tipo de triangulo: equilatero")
elif a==b or b==c or a==c:
		print("Tipo de triangulo: isoceles")
elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 4.0 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 22:23:16) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas:" , a, b, c)
elif a==b and b==c and a!=0:
	print("tipo de triangulo: equilatero")
elif a==b or b==c or a==c:
		print("Tipo de triangulo: isoceles")
elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.177283
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 4.0 4.0
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 4.4 5.5
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Tipo de triangulo: escaleno
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:24:13) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas:" , a, b, c)
	if a==b and b==c and a!=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isoceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 4.0 4.0
Tipo de triangulo: isoceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 22:24:20) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas:" , a, b, c)
	if a==b and b==c and a!=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isoceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.17608
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 4.0 4.0
Tipo de triangulo: isoceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 4.4 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 22:27:48) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas:" , a, b, c)
	if a==b and b==c and a!=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.124902
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 4.0 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 4.4 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:27:52) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas:" , a, b, c)
	if a==b and b==c and a!=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 4.0 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 22:28:53) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas:" , a",", b",", c)
	if a==b and b==c and a!=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.158518
-- ERROR:
  File "/home/codebench/codes/1692/1099/main.py", line 7
    print("Entradas:" , a",", b",", c)
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:28:55) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas:" , a",", b",", c)
	if a==b and b==c and a!=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 7
    print("Entradas:" , a",", b",", c)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:29:55) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: a, b, c")
	if a==b and b==c and a!=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: a, b, c
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:30:03) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: a, b, c")
	if a==b and b==c and a!=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: a, b, c
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:31:35) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: " a ",", b ",", c)
	if a==b and b==c and a!=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 7
    print("Entradas: " a ",", b ",", c)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:32:44) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: ")
	if a==b and b==c and a!=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:32:53) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: ")
	if a==b and b==c and a!=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:33:07) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: ")
	if a==b and b==c and a<=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:33:43) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: " a, b, c)
	if a==b and b==c and a<=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 7
    print("Entradas: " a, b, c)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:34:13) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: " a, b, c)
	if a==b and b==c and a<=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 7
    print("Entradas: " a, b, c)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:34:25) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: " a , b , c)
	if a==b and b==c and a<=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 7
    print("Entradas: " a , b , c)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:34:40) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: ", a, b, c)
	if a==b and b==c and a<=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 4.0 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:35:10) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: ", a, b, c)
	if a==b and b==c and a<=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Entradas: ", a, b, c)
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 4.0 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 22:35:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: ", a, b, c)
	if a==b and b==c and a<=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Entradas: ", a, b, c)
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.133903
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas:  2.0 4.0 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas:  3.3 4.4 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas:  1.0 2.0 7.0
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:35:48) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: ", a, b, c)
	if a==b and b==c and a<=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Entradas: ", a, b, c)
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 4.0 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:38:48) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: ", a, b, c)
	if a==b and b==c and a<=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Entradas: ", (a,), (b,), c)
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 4.0 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:39:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: ", a, b, c)
	if a==b and b==c and a<=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Entradas: ", a,, b,, c)
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 15
    print("Entradas: ", a,, b,, c)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:40:09) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: ", a, b, c)
	if a==b and b==c and a<=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Entradas: ", a(,), b(,), c)
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 15
    print("Entradas: ", a(,), b(,), c)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:40:31) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: ", a, b, c)
	if a==b and b==c and a<=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Entradas: ", (a,), (b,), c)
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 4.0 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 22:40:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: ", a, b, c)
	if a==b and b==c and a<=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Entradas: ", (a,), (b,), c)
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.222895
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas:  2.0 4.0 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas:  3.3 4.4 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas:  (1.0,) (2.0,) 7.0
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:41:10) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: ", a, b, c)
	if a==b and b==c and a<=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Entradas: ", (a,) (b,) c)
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 15
    print("Entradas: ", (a,) (b,) c)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:41:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: ", a, b, c)
	if a==b and b==c and a<=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Entradas: ", (a,) (b,) (c))
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 4.0 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:42:13) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: ", a, b, c)
	if a==b and b==c and a<=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Entradas: ", a, b, c)
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 4.0 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:42:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: ", a, b, c)
	if a==b and b==c and a<=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Entradas: a, b, c")
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 4.0 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 22:43:09) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: ", a, b, c)
	if a==b and b==c and a<=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Entradas: a, b, c")
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.147008
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas:  2.0 4.0 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas:  3.3 4.4 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: a, b, c
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:43:17) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: ", a, b, c)
	if a==b and b==c and a<=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Entradas: a, b, c")
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 4.0 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:43:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: ", a, b, c)
	if a==b and b==c and a<=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Entradas: a, b, c")
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 4.0 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:44:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: ", a, b, c)
	if a==b and b==c and a<=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Entradas:" a, b, c)
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 15
    print("Entradas:" a, b, c)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:09:20) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: ", a, b, c)
	if a==b and b==c and a<=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Entradas:" a, b, c)
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 15
    print("Entradas:" a, b, c)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:09:49) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: ", a, b, c)
	if a==b and b==c and a<=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Entradas:"), (a, b, c)
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 4.0 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:10:09) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: ", a, b, c)
	if a==b and b==c and a<=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Entradas:"), print(a, b, c)
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas:  2.0 4.0 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:10:37) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
if (a< b+c) and (b< a+c) and (c< a+b):
	print("Entradas: ", a, b, c)
	if a==b and b==c and a<=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Entradas:" a, b, c)
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 15
    print("Entradas:" a, b, c)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:13:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
print("Entradas:", a, ",", b, ",", c)
if (a< b+c) and (b< a+c) and (c< a+b):
	if a==b and b==c and a<=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:13:31) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a= float(input("escolha um numero: "))
b= float(input("escolha um numero: "))
c= float(input("escolha um numero: "))
print("Entradas:", a, ",", b, ",", c)
if (a< b+c) and (b< a+c) and (c< a+b):
	if a==b and b==c and a<=0:
		print("tipo de triangulo: equilatero")
	elif a==b or b==c or a==c:
		print("Tipo de triangulo: isosceles")
	elif a!=b and b!=c and c!=a:
		print("Tipo de triangulo: escaleno")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.135911
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
